feat(timeattack): add ghost stream backpressure ladder
Changelog: n/a: phase-3 changelog entry already added
Guide: n/a
Known-Discrepancies: n/a
S3K-Known-Discrepancies: n/a
Agent-Docs: n/a
Configuration-Docs: n/a
Skills: n/a